<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/pad16"
    tools:context=".EditorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Input fields -->
        <!-- Product Name -->
        <TextView
            android:id="@+id/label_book_product_name"
            style="@style/EditTextStyle"
            android:text="@string/hint_book_product_name"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_book_product_name"
            style="@style/EditTextStyle"
            android:layout_below="@+id/label_book_product_name"
            android:inputType="textCapWords" />

        <!-- Price -->
        <TextView
            android:id="@+id/label_book_price"
            style="@style/EditTextStyle"
            android:layout_below="@+id/edit_book_product_name"
            android:text="@string/hint_book_price"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditTextStyle"
            android:layout_below="@+id/label_book_price"
            android:inputType="number" />

        <!-- Quantity -->
        <TextView
            android:id="@+id/label_book_quantity"
            style="@style/EditTextStyle"
            android:layout_below="@+id/edit_book_price"
            android:text="@string/hint_book_quantity"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/quantity_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_book_quantity"
            android:layout_marginBottom="@dimen/pad16"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/quantity_down"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="@dimen/pad16"
                android:background="@color/list_price"
                android:src="@drawable/ic_chevron_left" />

            <TextView
                android:id="@+id/edit_book_quantity"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/quantity_up"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/pad16"
                android:background="@color/list_price"
                android:src="@drawable/ic_chevron_right" />

        </LinearLayout>

        <!-- Product Supplier Name -->
        <TextView
            android:id="@+id/label_book_supplier_name"
            style="@style/EditTextStyle"
            android:layout_below="@+id/quantity_box"
            android:text="@string/hint_book_supplier_name"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_book_supplier_name"
            style="@style/EditTextStyle"
            android:layout_below="@+id/label_book_supplier_name"
            android:inputType="textCapWords" />

        <!-- Supplier Phone Number -->
        <TextView
            android:id="@+id/label_book_supplier_phone_number"
            style="@style/EditTextStyle"
            android:layout_below="@+id/edit_book_supplier_name"
            android:text="@string/hint_book_supplier_phone_number"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_book_supplier_phone_number"
            style="@style/EditTextStyle"
            android:layout_below="@+id/label_book_supplier_phone_number"
            android:inputType="number" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/pad16"
            android:src="@drawable/ic_settings_phone" />

    </RelativeLayout>

</ScrollView>